v10.4.0/_sources/generated/pcdsdevices.areadetector.detectors.PCDSHDF5BlueskyTriggerable.rst.txt
pcdsdevices.areadetector.detectors.PCDSHDF5BlueskyTriggerable
=============================================================

.. currentmodule:: pcdsdevices.areadetector.detectors

.. autoclass:: PCDSHDF5BlueskyTriggerable

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - configuration_names
          - :class:`~ophyd.signal.ArrayAttributeSignal`
          - 
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorBase`
    
        * - cam (ADComponent)
          - :class:`~ophyd.areadetector.cam.CamBase`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorBase`
    
        * - hdf51 (ADComponent)
          - :class:`~pcdsdevices.areadetector.plugins.HDF5FileStore`
          - ``HDF51:``
          - Save output as an HDF5 file
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: collect_asset_docs
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: dispatch
    .. automethod:: find_signal
    .. automethod:: generate_datum
    .. automethod:: get
    .. automethod:: get_asyn_digraph
    .. automethod:: get_asyn_port_dictionary
    .. automethod:: get_plugin_by_asyn_port
    .. automethod:: get_plugin_graph_edges
    .. automethod:: make_data_key
    .. automethod:: missing_plugins
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: save_images
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: validate_asyn_ports
    .. automethod:: visualize_asyn_digraph
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: ad_root
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: num_images_per_point
    .. autoattribute:: subscriptions
    
    